Version 1.0.x (2010-02-xx)
	Added FileUploaded event that fires when a file is uploaded.
	Fixed issues with i18n support and added a Swedish language pack.
Version 1.0 (2010-02-03)
	First official release of Plupload.